force-app/main/default/objects/Campeonato__c/Campeonato__c.object-meta.xml
<CustomObject>
    <label>Campeonato</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campeonatos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>