force-app/main/default/objects/Campeonato__c/fields/Data_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_Inicio__c</fullName>
    <label>Data Início</label>
    <type>Date</type>
</CustomField>