force-app/main/default/objects/Campeonato__c/fields/Organizador__c.field-meta.xml
<CustomField>
    <fullName>Organizador__c</fullName>
    <label>Organizador</label>
    <length>128</length>
    <type>Text</type>
</CustomField>