force-app/main/default/objects/Campeonato__c/fields/Patrocinador__c.field-meta.xml
<CustomField>
    <fullName>Patrocinador__c</fullName>
    <label>Patrocinador Master</label>
    <length>128</length>
    <type>Text</type>
</CustomField>